objects/TEACstmrProfile__A_Customer_Profile__c.object
<CustomObject>
    <fields>
        <fullName>TEACstmrProfile__Strategic_Initiative_10_Target__c</fullName>
        <label>Strategic Initiative 10 Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>FY15Q1</fullName>
                </value>
                <value>
                    <fullName>FY15Q2</fullName>
                </value>
                <value>
                    <fullName>FY15Q3</fullName>
                </value>
                <value>
                    <fullName>FY15Q4</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Strategic_Initiative_10__c</fullName>
        <label>Strategic Initiative 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Strategic_Initiative_1_Status__c</fullName>
        <label>Strategic Initiative 1 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On target</fullName>
                </value>
                <value>
                    <fullName>In process with delays possible</fullName>
                </value>
                <value>
                    <fullName>Not on target</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Strategic_Initiative_1_Target__c</fullName>
        <label>Strategic Initiative 1 Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>FY15Q1</fullName>
                </value>
                <value>
                    <fullName>FY15Q2</fullName>
                </value>
                <value>
                    <fullName>FY15Q3</fullName>
                </value>
                <value>
                    <fullName>FY15Q4</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Strategic_Initiative_1__c</fullName>
        <inlineHelpText>How will the goals for this account be achieved?</inlineHelpText>
        <label>Strategic Initiative 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Strategic_Initiative_2_Status__c</fullName>
        <label>Strategic Initiative 2 Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On target</fullName>
                </value>
                <value>
                    <fullName>In process with delays possible</fullName>
                </value>
                <value>
                    <fullName>Not on target</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Strategic_Initiative_2_Target__c</fullName>
        <label>Strategic Initiative 2 Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY12Q1</fullName>
                </value>
                <value>
                    <fullName>FY12Q2</fullName>
                </value>
                <value>
                    <fullName>FY12Q3</fullName>
                </value>
                <value>
                    <fullName>FY12Q4</fullName>
                </value>
                <value>
                    <fullName>FY13Q1</fullName>
                </value>
                <value>
                    <fullName>FY13Q2</fullName>
                </value>
                <value>
                    <fullName>FY13Q3</fullName>
                </value>
                <value>
                    <fullName>FY13Q4</fullName>
                </value>
                <value>
                    <fullName>FY14Q1</fullName>
                </value>
                <value>
                    <fullName>FY14Q2</fullName>
                </value>
                <value>
                    <fullName>FY14Q3</fullName>
                </value>
                <value>
                    <fullName>FY14Q4</fullName>
                </value>
                <value>
                    <fullName>FY15Q1</fullName>
                </value>
                <value>
                    <fullName>FY15Q2</fullName>
                </value>
                <value>
                    <fullName>FY15Q3</fullName>
                </value>
                <value>
                    <fullName>FY15Q4</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Strategic_Initiative_2__c</fullName>
        <label>Strategic Initiative 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TAM_Pct_Change_Plan_Yr_1__c</fullName>
        <formula>IF(ISNULL(TEACstmrProfile__TAM_Plan_Year_M__c), 0,
			IF(TEACstmrProfile__TAM_Plan_Year_M__c = 0 , 0,
			(TEACstmrProfile__TAM_Plan_Yr_1_M__c / TEACstmrProfile__TAM_Plan_Year_M__c ) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAM Pct Change Plan Yr+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TAM_Pct_Change_Plan_Yr_4__c</fullName>
        <formula>IF(ISNULL(TEACstmrProfile__TAM_Plan_Yr_1_M__c), 0,
			IF(TEACstmrProfile__TAM_Plan_Yr_1_M__c = 0 , 0,
			(TEACstmrProfile__TAM_Plan_Yr_4_M__c / TEACstmrProfile__TAM_Plan_Yr_1_M__c ) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAM Pct Change Plan Yr+4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TAM_Pct_Change_Plan_Yr__c</fullName>
        <formula>IF(ISNULL(TEACstmrProfile__TAM_Prior_Yr_M__c), 0,
			IF(TEACstmrProfile__TAM_Prior_Yr_M__c = 0 , 0,
			( TEACstmrProfile__TAM_Plan_Year_M__c / TEACstmrProfile__TAM_Prior_Yr_M__c ) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAM Pct Change Plan Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TAM_Plan_Year_M__c</fullName>
        <inlineHelpText>TAM (Total Available Market) for the Plan Year in
			Millions</inlineHelpText>
        <label>TAM Plan Yr M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TAM_Plan_Yr_1_M__c</fullName>
        <inlineHelpText>TAM (Total Available Market) for the Plan Year+1 in
			Millions</inlineHelpText>
        <label>TAM Plan Yr+1 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TAM_Plan_Yr_4_M__c</fullName>
        <inlineHelpText>TAM (Total Available Market) for the Plan Year+4 in
			Millions</inlineHelpText>
        <label>TAM Plan Yr+4 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TAM_Prior_Yr_M__c</fullName>
        <inlineHelpText>TAM (Total Available Market) for the Year prior to the
			Plan Year in Millions</inlineHelpText>
        <label>TAM Prior Yr M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TE_Performance_Status__c</fullName>
        <label>TE Performance Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Solid, holding</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TE_Revenue_CY_Forecast_M__c</fullName>
        <inlineHelpText>Current Year WIP TE Forecast in Millions</inlineHelpText>
        <label>TE Revenue CY Forecast M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_1_M__c</fullName>
        <inlineHelpText>Plan Year+1 Forecasted TE Revenue in Millions</inlineHelpText>
        <label>TE Revenue Fcst Plan Yr+1 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_4_M__c</fullName>
        <inlineHelpText>Plan Year+4 Forecasted TE Revenue in Millions</inlineHelpText>
        <label>TE Revenue Fcst Plan Yr+4 M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_M__c</fullName>
        <inlineHelpText>Plan Year Forecasted TE Revenue in Millions</inlineHelpText>
        <label>TE Revenue Fcst Plan Yr M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TE_Revenue_Pct_Change_Plan_Yr_1__c</fullName>
        <formula>IF(ISNULL(TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_M__c), 0,
			IF(TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_M__c = 0 , 0,
			(TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_1_M__c / TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_M__c ) -1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Revenue Pct Change Plan Yr+1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TE_Revenue_Pct_Change_Plan_Yr_4__c</fullName>
        <formula>IF(ISNULL(TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_1_M__c), 0,
			IF(TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_1_M__c = 0 , 0,
			(TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_4_M__c / TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_1_M__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Revenue Pct Change Plan Yr+4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TE_Revenue_Pct_Change_Plan_Yr__c</fullName>
        <formula>IF(ISNULL(TEACstmrProfile__TE_Revenue_Prior_Yr_Actual_M__c), 0,
			IF(TEACstmrProfile__TE_Revenue_Prior_Yr_Actual_M__c = 0 , 0,
			(TEACstmrProfile__TE_Revenue_Fcst_Plan_Yr_M__c / TEACstmrProfile__TE_Revenue_Prior_Yr_Actual_M__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TE Revenue Pct Change Plan Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TE_Revenue_Prior_Yr_Actual_M__c</fullName>
        <inlineHelpText>Prior Year Actual TE Revenue in Millions (direct and/or indirect based on the Sales Figure Makeup specified in the account plan definition section) .</inlineHelpText>
        <label>TE Revenue Prior Yr Actual M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__TE_Revenue_YTD_Actual_M__c</fullName>
        <inlineHelpText>YTD Actual TE Revenue in Millions</inlineHelpText>
        <label>TE Revenue YTD Actual M</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Total_Rev_Pct_Chg_Plan_Yr_1__c</fullName>
        <formula>IF (ISNULL(TEACstmrProfile__Total_Revenue_M_Plan_Yr_2__c), 0,
			IF(TEACstmrProfile__Total_Revenue_M_Plan_Yr_2__c = 0 , 0,
			(TEACstmrProfile__Total_Revenue_M_Plan_Yr_1__c / TEACstmrProfile__Total_Revenue_M_Plan_Yr_2__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Rev Pct Chg Plan Yr-1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Total_Rev_Pct_Chg_Plan_Yr_2__c</fullName>
        <formula>IF (ISNULL(TEACstmrProfile__Total_Revenue_M_Plan_Yr_3__c), 0,
			IF(TEACstmrProfile__Total_Revenue_M_Plan_Yr_3__c = 0 , 0,
			(TEACstmrProfile__Total_Revenue_M_Plan_Yr_2__c / TEACstmrProfile__Total_Revenue_M_Plan_Yr_3__c )
			-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Rev Pct Chg Plan Yr-2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Total_Revenue_M_Plan_Yr_1__c</fullName>
        <label>Total Revenue M Plan Yr-1</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Total_Revenue_M_Plan_Yr_2__c</fullName>
        <label>Total Revenue M Plan Yr-2</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Total_Revenue_M_Plan_Yr_3__c</fullName>
        <label>Total Revenue M Plan Yr-3</label>
        <precision>7</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Unique_A_Customer_Year__c</fullName>
        <description>worker field to enforce uniqueness</description>
        <label>Unique &quot;A&quot; Customer Year</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TEACstmrProfile__Worldwide_Account__c</fullName>
        <inlineHelpText>Worldwide Account Number (8-digit) in which accounts
			for this A Customer are included.</inlineHelpText>
        <label>Worldwide Account</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>&quot;A&quot; Customer Profile</label>
    <listViews>
        <fullName>TEACstmrProfile__ADM_All</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Content_Owner__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Business_Unit__c</field>
            <operation>equals</operation>
            <value>&quot;Aerospace, Defense &amp; Marine&quot;</value>
        </filters>
        <label>ADM - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__ADM_Approved</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Content_Owner__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Business_Unit__c</field>
            <operation>equals</operation>
            <value>&quot;Aerospace, Defense &amp; Marine&quot;</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>ADM - Approved</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__ADM_Not_Approved</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Content_Owner__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Business_Unit__c</field>
            <operation>equals</operation>
            <value>&quot;Aerospace, Defense &amp; Marine&quot;</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Not Submitted,Pending,Rejected,Unlocked</value>
        </filters>
        <label>ADM - Not Approved</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__All</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__TE_Performance_Status__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>TEACstmrProfile__Integration_Last_Update_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__All_Approved_FY12</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Plan_Year__c</field>
            <operation>equals</operation>
            <value>2012</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <label>All - Approved (FY12)</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__All_Approved_FY13</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Plan_Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <label>All - Approved (FY13)</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__All_Not_Approved</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Not Submitted,Pending,Rejected,Unlocked</value>
        </filters>
        <label>All - Not Approved</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__Appliances_All</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Business_Unit__c</field>
            <operation>equals</operation>
            <value>Appliances</value>
        </filters>
        <label>Appliances - All</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__Appliances_Approved</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Business_Unit__c</field>
            <operation>equals</operation>
            <value>Appliances</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Appliances - Approved</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__Appliances_Note_Approved</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Business_Unit__c</field>
            <operation>equals</operation>
            <value>Appliances</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Not Submitted,Pending,Rejected,Unlocked</value>
        </filters>
        <label>Appliances - Not Approved</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__Approved_A_Customer_Profiles_FY12</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Plan_Year__c</field>
            <operation>equals</operation>
            <value>2012</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <label>Approved A Customer Profiles FY12</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__Automotive_All</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Content_Owner__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Business_Unit__c</field>
            <operation>equals</operation>
            <value>Automotive</value>
        </filters>
        <label>Automotive - All</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__Automotive_Approved</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Content_Owner__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Business_Unit__c</field>
            <operation>equals</operation>
            <value>Automotive</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Automotive - Approved</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__Automotive_Not_Approved</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Content_Owner__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Business_Unit__c</field>
            <operation>equals</operation>
            <value>Automotive</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Not Submitted,Pending,Rejected,Unlocked</value>
        </filters>
        <label>Automotive - Not Approved</label>
    </listViews>
    <listViews>
        <fullName>TEACstmrProfile__Circuit_Protection_All</fullName>
        <columns>NAME</columns>
        <columns>TEACstmrProfile__Business_Unit__c</columns>
        <columns>TEACstmrProfile__Plan_Year__c</columns>
        <columns>TEACstmrProfile__Approval_Status__c</columns>
        <columns>TEACstmrProfile__Customer_Type__c</columns>
        <columns>TEACstmrProfile__Content_Owner__c</columns>
        <columns>TEACstmrProfile__Monthly_Update_Last_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TEACstmrProfile__Customer_Type__c</field>
            <operation>equals</operation>
            <value>A Customer</value>
        </filters>
        <filters>
            <field>TEACstmrProfile__Business_Unit__c</field>
            <operation>equals</operation>
            <value>Circuit Protection</value>
        </filters>
        <label>Circuit Protection - All</label>
    </listViews>
    <nameField>
        <label>&quot;A&quot; Customer Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>&quot;A&quot; Customer Profiles</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>TEACstmrProfile__Competitors_MS_Pct_sum_cannot_exceed_100</fullName>
        <active>true</active>
        <description>Sum of all Competitors MS Percentages cannot exceed 100</description>
        <errorConditionFormula>IF(    IF(ISNULL(TEACstmrProfile__Competitor_1_Market_Share__c),0,TEACstmrProfile__Competitor_1_Market_Share__c) +
IF(ISNULL(TEACstmrProfile__Competitor_2_Market_Share__c),0,TEACstmrProfile__Competitor_2_Market_Share__c) +
IF(ISNULL(TEACstmrProfile__Competitor_3_Market_Share__c),0,TEACstmrProfile__Competitor_3_Market_Share__c) +
IF(ISNULL(TEACstmrProfile__Competitor_4_Market_Share__c),0,TEACstmrProfile__Competitor_4_Market_Share__c) +
IF(ISNULL(TEACstmrProfile__Competitor_5_Market_Share__c),0,TEACstmrProfile__Competitor_5_Market_Share__c) +
IF(ISNULL(TEACstmrProfile__Competitor_6_Market_Share__c),0,TEACstmrProfile__Competitor_6_Market_Share__c)
  &gt;1.00 , true, false)</errorConditionFormula>
        <errorDisplayField>TEACstmrProfile__Competitor_1_Market_Share__c</errorDisplayField>
        <errorMessage>Sum of all Competitors Market Share Percentages cannot exceed 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TEACstmrProfile__GAM_Code_not_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL( TEACstmrProfile__Account_Definition__c , &quot;GAM Code&quot;)) &amp;&amp; 
(LEN(TEACstmrProfile__GAM_Code__c)&gt;0)</errorConditionFormula>
        <errorDisplayField>TEACstmrProfile__GAM_Code__c</errorDisplayField>
        <errorMessage>GAM Code can not be entered when GAM is not selected in Account Definition</errorMessage>
    </validationRules>
</CustomObject>